# txspec

./: README.md  go.mod  go.sum
TxSpec-Engine/: CMakeLists.txt  Dockerfile  DockerfileBuildEnv  Jenkinsfile  README.md  docker-compose.yaml  docker-entrypoint.sh  main.cpp
TxSpec-Engine/binding/: CMakeLists.txt
TxSpec-Engine/binding/trusted/: BindingEnclave.cpp  BindingEnclave.edl  TxContext.cpp  TxContext.h
TxSpec-Engine/binding/trusted/binding_language/: BindingResolver.cpp  BindingResolver.h
TxSpec-Engine/binding/trusted/binding_language/antlr4_generated/: BindingLexer.cpp  BindingLexer.g4  BindingLexer.h  BindingLexer.interp  BindingParser.cpp  BindingParser.g4  BindingParser.h  BindingParser.interp  BindingParser.tokens  BindingParserBaseListener.cpp  BindingParserBaseListener.h  BindingParserListener.cpp  BindingParserListener.h
TxSpec-Engine/binding/trusted/binding_language/binding_language_listener/: BindingListener.cpp  BindingListener.h  DataType.h
TxSpec-Engine/binding/untrusted/: BindingQuery.cpp  BindingQuery.h  BindingUntrust.cpp  BindingUntrust.h
TxSpec-Engine/common/json_lib/: json11.cpp
TxSpec-Engine/common/monitor/: CMakeLists.txt  main.cpp
TxSpec-Engine/common/monitor/prometheus_client/: client.cpp
TxSpec-Engine/common/monitor/untrusted/: UntrustedEnclaveCollectMetrics.cpp
TxSpec-Engine/common/protos/trusted_cpp/binding_enclave/: ProofRequest.pb.cc  ProofRequest.pb.h  ProofResponse.pb.cc  ProofResponse.pb.h
TxSpec-Engine/common/protos/untrusted_cpp/: BindingQuery.pb.cc  BindingQuery.pb.h  Firehose.grpc.pb.cc  Firehose.grpc.pb.h  Firehose.pb.cc  Firehose.pb.h  ProofRequest.pb.cc  ProofRequest.pb.h  ProofResponse.pb.cc  ProofResponse.pb.h  Register.grpc.pb.cc  Register.grpc.pb.h  Register.pb.cc  Register.pb.h  Regulator.pb.cc  Regulator.pb.h
TxSpec-Engine/common/protos/untrusted_proto/: Firehose.proto  ProofRequest.proto  ProofResponse.proto  Register.proto  Regulator.proto
TxSpec-Engine/common/query_runtime/: CMakeLists.txt  QueryEntity.cpp  QueryEntity.h  QueryEntityDABImpl.cpp  QueryEntityDABImpl.h  QueryEntityERC20Impl.cpp  QueryEntityERC20Impl.h  QueryRuntime.cpp  QueryRuntime.h  sample.json  utils.cpp  utils.h
TxSpec-Engine/compliance_engine_server/: ComplianceEngine.cpp  Config.cpp  Init.cpp
TxSpec-Engine/compliance_engine_server/request_processor/: FirehoseClient.cpp  FirehoseClient.h  Queue.cpp  Queue.h  RegisterServiceImpl.cpp  RegisterServiceImpl.h  RegulatorServer.cpp  RegulatorServiceImpl.cpp  RegulatorServiceImpl.h
TxSpec-Engine/config/: ComplianceEngine.yaml  Config.json
TxSpec-Engine/docs/: ComplianceEnginePrerequisites.md  ErrorCode_VS_Exception.md  LogSystem_Manual.md  RuleEngineCodeStyleCheckList.xlsx  RuleEngine_CodeStyle_Checklist.md
TxSpec-Engine/http_client/: CMakeLists.txt  HttpClient.cpp  main.cc
TxSpec-Engine/include/common/monitor/prometheus_client/: client.h
TxSpec-Engine/include/common/monitor/trusted/: CollectMetrics.edl  MetricsType.h
TxSpec-Engine/include/common/monitor/untrusted/: UntrustedEnclaveCollectMetrics.h
TxSpec-Engine/include/compliance_engine_server/: ComplianceEngine.h  Config.h  Init.h
TxSpec-Engine/include/compliance_engine_server/request_processor/: RegulatorServer.h
TxSpec-Engine/include/http_client/: HttpClient.h
TxSpec-Engine/key_management/: CMakeLists.txt
TxSpec-Engine/key_management/trusted/: KeyManagementEnclave.h
TxSpec-Engine/key_management/untrusted/verifier/: KeyStore.h
TxSpec-Engine/rule/: CMakeLists.txt
TxSpec-Engine/rule/trusted/: RuleEnclave.cpp
TxSpec-Engine/rule/trusted/data_provider/: DataProvider.h  Query.h
TxSpec-Engine/rule/trusted/data_types/: Entity.h  EntitySet.h  RequestContext.cpp  RequestContext.h
TxSpec-Engine/rule/trusted/local_attestation/: RuleResponse.cpp  RuleResponse.h
TxSpec-Engine/rule/trusted/request_handler/: RequestHandler.cpp  RequestHandler.h
TxSpec-Engine/rule/trusted/rule_visitors/: EntityCollector.cpp  RuleEvaluator.cpp
TxSpec-Engine/rule/trusted/test/: RuleEnclaveTestUtils.cpp  RuleEnclaveTestUtils.h
TxSpec-Engine/rule/untrusted/: RuleEnclaveUntrusted.cpp  RuleEnclaveUntrusted.h
TxSpec-Engine/scripts/: compile_main_local.sh  compile_test_client_local.sh  run_integration_test_docker.sh
TxSpec-Engine/scripts/test/: LaunchTest.md  data_access.sh
TxSpec-Engine/scripts/test/docker/: docker-compose-main.yaml  docker-compose-mysql.yaml
TxSpec-Engine/scripts/test/integration_test/: compliance-test.sh  intergration.sh  registration-test.sh
TxSpec-Engine/test/: CMakeLists.txt  register_client.cpp  regulator_client.cpp
TxSpec-Engine/test/basic_server/: firehose_server.hpp
TxSpec-Engine/test/testcases/: list.cpp  list.h  nft_transfer.cpp  nft_transfer.h  period_transfer_limit.cpp  period_transfer_limit.h  single_transfer_limit.cpp  single_transfer_limit.h
TxSpec-Engine/test/testcases/schema/: nft_schema.h  system_schema.cpp  system_schema.h  transfer_schema.h
app/: app.go  modules.go
modules/regulatory/: genesis.go  module.go  module_simulation.go  proposal_handler.go
modules/regulatory/keeper/: binding.go  grpc_query.go  grpc_query_binding.go  grpc_query_params.go  grpc_query_registration.go  grpc_query_relation.go  grpc_query_reward_list.go  grpc_query_rule.go  grpc_query_spec_values.go  grpc_query_suspicious_account_list.go  keeper.go  msg_server.go  msg_server_submit_spec_value.go  params.go  posthandler.go  registration.go  regulatory.go  relation.go  reward_list.go  rule.go  spec_values.go  suspicious_account_list.go
modules/regulatory/simulation/: submit_spec_value.go
modules/regulatory/types/: ProofRequest.pb.go  ProofResponse.pb.go  binding.pb.go  binding_proposal.go  binding_proposal.pb.go  codec.go  endpoint.pb.go  errors.go  events.go  genesis.go  genesis.pb.go  genesis_test.go  key_binding.go  key_registration.go  key_relation.go  key_reward_list.go  key_rule.go  key_spec_values.go  key_suspicious_account_list.go  keys.go  message_submit_spec_value.go  params.pb.go  query.pb.go  query.pb.gw.go  register.pb.go  register_proposal.go  register_proposal.pb.go  registration.pb.go  (+17 more)
(+12 files in other folders)
